# DeepLearning

./: .gitignore  README.md  pyproject.toml  requirements.txt
Course Tracker/: TodoList.html  course_content.json
DeepLearningCodeFiles/ANN/: 10_numParameters.ipynb  11_ANNclass.ipynb  12_Varying_Breadth_and_Width.ipynb  1_ANN_Regression.ipynb  2_Code_Mission_1.ipynb  3_ANN_Classification.ipynb  4_ANN_Classification_VaryingLR.ipynb  5_Multi_LayerAnn_qwerties.ipynb  6_MLP.ipynb  7_MultiOutput_Iris_ANN.ipynb  8_MultiOutput_Qwerties.ipynb  9_nHiddenLayers.ipynb
DeepLearningCodeFiles/ANN/Dataset/: Admission_Predict.ipynb  CC_churnPrediction.ipynb  MNIST_Dataset.ipynb
DeepLearningCodeFiles/Basic Maths/: BasicMaths.ipynb
DeepLearningCodeFiles/Gradient Descent/: Gradient_Descent_1D.ipynb  Gradient_Descent_2D.ipynb  Gradient_Descent_Experiments.ipynb  Gradient_Descent_VaryingLearningRates.ipynb
DeepLearningCodeFiles/Perceptron/: Perceptron_Training.ipynb
openCV/Basic Handling/: Display.py  Reading.py  SavingImage.py
openCV/Img Transformation Manipulation/: Flipping.py  Resizing.py  Rotation.py  croping.py
